# speech-segment

./: .gitignore  pyproject.toml
speaker_segments/: SPEAKER_00_summary.txt  SPEAKER_00_transcript.txt  SPEAKER_01_summary.txt  SPEAKER_01_transcript.txt  SPEAKER_02_transcript.txt  full_text_summary.txt  full_transcript.txt  speakers_combined_summary.txt
